objects/maps__LiveDailySummaryConfig__c.object
<CustomObject>
    <fields>
        <fullName>maps__ActiveDevicesCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the total number of active devices associated with the DeviceLayer on this Summary. This total is calculated daily during the Summaries batch run. This can also be updated by re-running the Summary batch manually.</description>
        <inlineHelpText>Total number of active devices associated with the DeviceLayer on this Summary</inlineHelpText>
        <label>Active Devices Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateDeviceBatteryRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Device Battery Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateHardAccelRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Hard Accel Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateHardBrakeRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Hard Brake Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateSpeedRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Speed Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateSpeedThresholdRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Speed Threshold Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateStateMileageRecord__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create State Mileage Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__CreateStopRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Stop Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__DeviceLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Layer</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Live Daily Summary Configurations</relationshipLabel>
        <relationshipName>LiveDailySummaryConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__DistanceValue__c</fullName>
        <label>Distance Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DriveTripOptimization__c</fullName>
        <label>Drive Trip Optimization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle Tracking</fullName>
                    <default>true</default>
                    <label>Vehicle Tracking</label>
                </value>
                <value>
                    <fullName>Mobile Tracking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__JobId__c</fullName>
        <description>The current job id of the running Summary batch job associated with this config</description>
        <inlineHelpText>The current job id of the running Summary batch job associated with this config</inlineHelpText>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastBatchEndDateTime__c</fullName>
        <label>Last Batch End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LastBatchId__c</fullName>
        <label>Last Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LastBatchStartDateTime__c</fullName>
        <label>Last Batch Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__MeasureOfDistance__c</fullName>
        <label>Measure of Distance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>meters</fullName>
                    <label>Meters</label>
                </value>
                <value>
                    <fullName>feet</fullName>
                    <default>true</default>
                    <label>Feet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SpeedAmtOfTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speed Amt Of Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__SpeedLimitOver__c</fullName>
        <label>Speed Limit Over</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SpeedLimitTimeIncrement__c</fullName>
        <label>Speed Limit Time Increment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                    <default>true</default>
                    <label>Minutes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SpeedLimitTime__c</fullName>
        <label>Speed Limit Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SpeedLimitUnits__c</fullName>
        <label>Speed Limit Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mph</fullName>
                    <default>true</default>
                    <label>mph</label>
                </value>
                <value>
                    <fullName>kph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SpeedThresholdEventActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speed Threshold Event Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__SpeedThresholdTime__c</fullName>
        <label>Speed Threshold Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SpeedThresholdUnits__c</fullName>
        <label>Speed Threshold Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mph</fullName>
                    <default>true</default>
                    <label>Mph</label>
                </value>
                <value>
                    <fullName>kph</fullName>
                    <label>Kph</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SpeedThreshold__c</fullName>
        <label>Speed Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SpeedValue__c</fullName>
        <label>Speed Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SpeedingEventActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speeding Event Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__StopEventActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Event Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__StopTimeValue__c</fullName>
        <label>Stop Time Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__UnitOfSpeed__c</fullName>
        <label>Unit of Speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mph</fullName>
                    <default>true</default>
                    <label>mph</label>
                </value>
                <value>
                    <fullName>kph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maps Live Daily Summary Configuration</label>
    <nameField>
        <label>Maps Live Daily Summary Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Daily Summary Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>